--- a/myapp/src/app/partials/printshop_detail.html
+++ b/myapp/src/app/partials/printshop_detail.html
@@ -1,6 +1,6 @@
 <!-- Product Details 2
 ============================================ -->
-<div class="product-details2 pages">
+<div class="product-details2 pages" ng-init="getMerchandize()">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
