set colors in detail view

--- a/myapp/src/app/partials/printshop_detail.html
+++ b/myapp/src/app/partials/printshop_detail.html
@@ -46,12 +46,12 @@
 								<p>Available: <span>In Stock</span></p>
 							</div>
 							<div class="pro-color-size pro-color-size-2">
-								<div class="pro-color pro-color-2">
+								<div class="">
 									<h4>Colors:</h4>
 									<!--<span ng-style="{'background-color': item.color}" ng-repeat="item in  currentSize track by $index">{{item.color}}	</span>-->
-									<ul>
-										<li class=" pointer" ng-style="getColor(item.color)" ng-click="setCurrentSize(null, $index)" 
-										ng-repeat="item in  currentSize track by $index"><a>color 1</a></li>
+									<ul class="color-ul">
+										<li class=" pointer color-li" ng-style="getColor(item.color)" ng-click="setCurrentSize(null, $index)" 
+										ng-repeat="item in  currentSize track by $index"><a></a></li>
 									</ul>
 								</div>
 								<div class="pro-size pro-size-2">
