Change back to web app

--- a/web/assets/less/responsive.md.less
+++ b/web/assets/less/responsive.md.less
@@ -1,5 +1,31 @@
 .laptop(){ 
 
+	.pages{
+		
+		font-size: 16px;
+
+		h1{
+			font-size: 32px;
+			clear:both;
+		}
+
+		h2{
+			font-size: 26px;
+			clear:both;
+		}
+
+		h3{
+			font-size: 22px;
+			clear:both;
+		}
+
+		h4{
+			font-size: 18px;
+			clear:both;
+		}
+
+	}
+
 	.logo{
  		
  		margin-bottom: 20px;
