--- a/web/assets/less/responsive.xs.less
+++ b/web/assets/less/responsive.xs.less
@@ -1,5 +1,9 @@
 .smartphone() {
  	
+ 	*{
+ 		font-size: 16px;
+ 	}
+
 
  	.logo{
  		padding-left: 20px;
@@ -9,11 +13,29 @@
 
  	.pages{
 		margin-top: 100px;
+		
+		font-size: 16px;
 
 		h1{
-			font-size: 34px;
+			font-size: 32px;
 			clear:both;
 		}
+
+		h2{
+			font-size: 26px;
+			clear:both;
+		}
+
+		h3{
+			font-size: 22px;
+			clear:both;
+		}
+
+		h4{
+			font-size: 18px;
+			clear:both;
+		}
+
 	}
 
 	.about-area {
