--- a/web/partials/inc_header_nav.html
+++ b/web/partials/inc_header_nav.html
@@ -27,7 +27,7 @@
                 </li>
                 <li>
                     <a ui-sref="blog">
-                        NEWS
+                        BLOG
                     </a>
                 </li>
                 <li>
@@ -152,7 +152,7 @@
                         </li>-->
                         <li>
                             <a ui-sref="blog">
-                                NEWS
+                                BLOG
                             </a>
                         </li>
                         <li>
