--- a/web/assets/less/custom.less
+++ b/web/assets/less/custom.less
@@ -72,3 +72,16 @@
 	font-size: 50px;
 	color: @color_secondary;
 }
+
+.color-li{
+    
+    list-style: none;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    margin-left: 6px;
+    border: 1px solid black;
+}
+.color-ul {
+    display:inline-flex;
+}
