--- a/web/assets/less/responsive.sm.less
+++ b/web/assets/less/responsive.sm.less
@@ -3,13 +3,34 @@
 		padding-left: 20px;
 		margin-bottom: 20px;
 	}
+
 	.pages{
-			margin-top: 100px;
+		margin-top: 100px;
+		
+		font-size: 16px;
+
 		h1{
-			
+			font-size: 32px;
 			clear:both;
 		}
+
+		h2{
+			font-size: 26px;
+			clear:both;
+		}
+
+		h3{
+			font-size: 22px;
+			clear:both;
+		}
+
+		h4{
+			font-size: 18px;
+			clear:both;
+		}
+
 	}
+	
 	.header-search {
 		.search-form.active {
 			width: 300px;
