--- a/web/assets/less/product.less
+++ b/web/assets/less/product.less
@@ -572,7 +572,7 @@
 	}
 }
 .product-details2 {
-	margin: 72px 0 82px;
+	margin: 10px;
 }
 .product-image-2 {
 	.pro-image-tab-container {
@@ -589,11 +589,16 @@
 	}
 }
 .pro-image-tab-list-2 {
-	display: block;
+	
+	width: 30%;
+	span{
+	margin: 10px;
 	float: left;
-	width: 16.6%;
+	}
+
 	li {
-		margin-bottom: 21px;
+		margin-bottom: 20px;
+		list-style: none;
 		a {
 			display: block;
 			img {
@@ -605,7 +610,7 @@
 .product-info-2 {
 	background: #fff none repeat scroll 0 0;
 	margin-left: -15px;
-	padding: 55px 45px 34px;
+	padding: 10px;
 }
 .pro-info-cat-2 {
 	margin-bottom: 24px;
