--- a/web/partials/printshop_category.html
+++ b/web/partials/printshop_category.html
@@ -27,7 +27,7 @@
                         <div class="pro-content">
                             <div class="top fix">
                                 <h3>
-                                    <a href="printshop.mug.php">
+                                     <a ui-sref="printshopDetail({category:category,product:product.pk})">
                                         {{product.name}}
                                     </a>
                                 </h3>
