--- a/web/partials/printshop.html
+++ b/web/partials/printshop.html
@@ -27,7 +27,7 @@
                         <div class="pro-content">
                             <div class="top fix">
                                 <h3>
-                                    <a href="printshop.mug.php">
+                                  <a ui-sref="printshopCategory({category:product.pk})">
                                         {{product.name}}
                                     </a>
                                 </h3>
