--- a/web/partials/printshop_detail.html
+++ b/web/partials/printshop_detail.html
@@ -3,43 +3,41 @@
 <div class="product-details2 pages" ng-init="getMerchandize()">
 	<div class="container">
 		<div class="row">
+		
 			<div class="col-sm-12">
+				
+				<h1>{{product.name}}</h1>
 				<!-- Product Container -->
 				<div class="row">
 					<!-- Product Image -->
-					<div class="product-image-2 col-md-6 col-xs-12">
+					<div class="product-image col-md-6 col-xs-12">
 						<!-- Product Image Tab container -->
+
 						<div class="pro-image-tab-container tab-content fix">
 							<!-- Product Image Tab -->
 							<div class="pro-image-tab tab-pane active" id="image-1">
 								<img src="{{activeImage}}" alt="" />
 							</div>
 						</div>
+
 						<!-- Product Image Tab List -->
-						<ul class="pro-image-tab-list-2">
+						<ul class="pro-image-tab-list">
 							<li ng-repeat="img in  imageList track by $index" ng-class="{active: activeImage== img}"
 							class=" pointer" ng-click="setActiveImage(img)">
 								<a data-toggle="tab" ><img src="{{img}}" alt="" /></a>
 							</li>
 						</ul>
-						<!--<ul class="pro-image-tab-list-2" ng-if="selectedItem">
-							<li ng-repeat="img in selectedItem.images track by $index" ng-class="{active: activeImage== img}" 
-							class="pointer" ng-click="setActiveImage(img)">
-								<a data-toggle="tab"><img src="{{img}}" alt="" /></a>
-							</li>
-						</ul>-->
+
 					</div>
 					<!-- Product Info -->
 					<div class="col-md-6 col-xs-12">
 						<div class="product-info-2 fix">
 							<!-- Product Info Cat -->
-							<div class="pro-info-cat-2">
-								<p>{{product.name}}</p>
-							</div>
+						
 							<div class="fix">
 								<div class="pro-info-price-2 float-left fix">
 									<span style="font-size:14px;position: relative; bottom:-15px">Start From</span>
-									<h1>RM{{selectedItem.price || product.minimum_price}}</h1>
+									<h2>RM{{selectedItem.price || product.minimum_price}}</h2>
 								</div>
 							</div>
 
@@ -59,31 +57,41 @@
 										ng-repeat="item in  currentSize track by $index"><a></a></li>
 									</ul>
 								
-							
-								
-								<!--<div class="pro-color pro-color-2">
-									<h4>Colors:</h4>
-									<ul>
-										<li ng-style="getColor(item.color)" ng-repeat="item in  currentSize track by $index"><a>color 1</a></li>
+								<div class="pro-info-actions-2 text-center fix">
 
-									</ul>
-								</div>-->
+							<a href="/printshop/dist/#/product/selection/{{product.pk}}/white">
+								<button  class="pro-info-addcart" >
+							<i class="mo-cart"></i>CLICK HERE TO CUSTOMIZE
+								</button>
+							</a>	
+								</div>
 
 							</div>
+
 							<div style="clear:both"></div>
-							<div class="pro-info-des-2">
-								<h2>DESCRIPTION</h2>
-								<p ng-bind-html="deliberatelyTrustDangerousSnippet(product.description)"></p>
-							</div>
+
+
 
 						</div>
-						<div class="pro-info-actions-2 text-center fix">
-							<a ui-sref="custom.images.home">
-							<button  class="pro-info-addcart"><i class="mo-cart"></i>CUSTOMIZE IT!</button>
-							</a>
-						</div>
+					
 					</div>
+
+
 				</div>
+
+				<div class="row">
+
+				<div class="col-xs-12">
+
+					<div class="pro-info-des-2">
+						<h2>DESCRIPTION</h2>
+						<p ng-bind-html="deliberatelyTrustDangerousSnippet(product.description)"></p>
+					</div>
+
+				</div>
+				</div>
+
+
 
 			</div>
 
