UI change to show only printshop page

--- a/web/assets/less/common.less
+++ b/web/assets/less/common.less
@@ -42,7 +42,7 @@ body {
 	position:relative;
 }
 #content {
-	padding-bottom:200px; /* Height of the footer element */
+	/* padding-bottom:200px; Height of the footer element */
 }
 footer{
 	position: absolute;
