--- a/web/css/style.css
+++ b/web/css/style.css
@@ -40,8 +40,7 @@ body {
   position: relative;
 }
 #content {
-  padding-bottom: 200px;
-  /* Height of the footer element */
+  /* padding-bottom:200px; Height of the footer element */
 }
 footer {
   position: absolute;
