--- a/web/partials/printshop_category.html
+++ b/web/partials/printshop_category.html
@@ -1,16 +1,16 @@
 <div class="pages">
-    <h1>
-        {{msg}}
-    </h1>
+   
     <!-- Top Rated Product
     ============================================ -->
     <div class="top-product tab-product-2">
         <div class="container">
-            <div class="row">
+            <div class="row text-center"> 
+            <a class="btn btn-primary btn-lg" ui-sref="printshop">
+            <i class="fa fa-home fa-fw fa-3x" aria-hidden="true"></i>BACK TO PRINTSHOP</a>
                 <h2>
                     {{category}}
                 </h2>
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3" ng-repeat="product in products">
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3" ng-repeat="product in products | filter : { web_ready : true}">
                     <div class="product-grid-wider">
                         <!-- Product Image -->
                         <div class="pro-image">
